Product page - prev/next jquery-ui buttons fix Prev/next buttons caused the horizontal ruler to appear on screen. Set overflow:hidden to parent block.

--- a/_tikimaster_styles.css
+++ b/_tikimaster_styles.css
@@ -271,10 +271,12 @@ td.ztxt { padding:0 20px 0 0px; }
 
 #bg1 {
   background:url('img/tk08_bodybg_left-493x552.gif') left top no-repeat;
+  overflow:hidden;
 }
 
 #bg2 {
   background:url('img/tk08_bodybg_right-493x552.gif') right top no-repeat;
+  overflow:hidden;
 }
 
 #appPreView {
